data/derived/comb/progs/unify/prog8821.ml.out
Characters 28-54:
  let fixpoint (f,b) = wwhile (fun x -> (x, f x = x), b);;
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
